# Software-Security-IT-355

./: rlellab2.cpp  rlellab2.sln  Новый документ(5).docx
fixed/: CMakeLists.txt  LicenseKey.cpp  LicenseKey.h  LicenseManager.cpp  LicenseManager.h  license.txt  licensing_fixed  main.cpp  ~$բորատոր աշխատանք.docx  Լաբորատոր աշխատանք.docx
lab10/: lab10.docx  readme.txt
lab10/cpp_project/: AdvancedObfuscation.cpp.cpp  controlflow.cpp.cpp  xor.cpp.cpp  xor_obfuscation.cpp.cpp
lab10/python_project/: control_flow.py.py  obfuscation.py.py  xor_obfuscation.py.py
lab11/: advanced_protection.cpp.cpp  main_obfuscation.cpp.cpp  Լաբորատոր աշխատանք 11.docx
lab12/: crackme.cpp  hello.cpp.cpp  packer_builder.cpp.cpp  stub.cpp  Լաբորատոր աշխատանք 12.docx
lab13/: firewall_sim.py.py  gui_firewall.py.py  lin_firewall.cpp.cpp  Լաբորատոր աշխատանք 13.docx
lab9/: hello.cpp.txt  lab9.docx
protectusb_fixed/: CMakeLists.txt  cipher.cpp  cipher.h  file_operations.cpp  file_operations.h  main.cpp  usb_detector.cpp  usb_detector.h  utils.cpp  utils.h
